# munich-glance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: app-config.yaml
docs/: configure-departures.md  getting-started.md
docs/implementation/: 001-init.md  002-dynamic-refresh-multi-station.md  003-dynamic-refresh-multi-station-impl.md  004-grouped-display-features.md
docs/spec/: 001-init.md
scripts/: README.md  build.sh  check_code.sh  format_code.sh  generate_sleep_image.py  setup_fonts.sh
tests/: __init__.py  test_smoke.py
trmnl_server/: __init__.py  __main__.py  config.py  config_loader.py  database.py  main.py  models.py  timezone.py
trmnl_server/cli/: __init__.py  configure.py
trmnl_server/plugins/: __init__.py  base.py
trmnl_server/plugins/munichglance/: __init__.py  config.py  departures.py  icons.py  plugin.py  renderer.py  weather.py
trmnl_server/routes/: __init__.py  api.py  settings.py
trmnl_server/services/: __init__.py  plugins.py  scheduler.py
web/: index.html
