[project]
name = "munich-glance"
version = "0.1.0"
description = "TRMNL BYOS plugin for Munich public transport and weather display"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MunichGlance"}
]
keywords = ["trmnl", "byos", "munich", "mvg", "transit", "e-ink"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pillow>=10.3.0",
    "mvg>=1.2.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.scripts]
munich-glance = "trmnl_server.__main__:main"
munich-glance-configure = "trmnl_server.cli.configure:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trmnl_server"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | venv
  | _build
  | build
  | dist
  | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist", ".pytest_cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
